# MEREDITH

./: .gitignore  README.md  pyproject.toml
meredith/: config.json  cosine.py  prompts.py  recommendations.py  run.py  vertex_search.py
src/meredith/: __main__.py  cosine.py  patients.json  recommendations.py  set_variable.py  tool.py
tests/integration_tests/: test_recommendations.py  test_vertex_search.py
tests/unit_tests/: test_recommendations.py  test_vertex_search.py
